# nexus

./: Cargo.toml  notes.txt  todo.txt
bit-ext/: Cargo.toml
bit-ext/src/: bit_serde.rs  bit_width.rs  lib.rs  recover_type.rs
data/: json.txt  test.pcapng
examples/: nexus.rs
nexus-lib/: Cargo.toml
nexus-lib/examples/: eth2.rs
nexus-lib/src/: arena.rs  error.rs  ethernet.rs  icmp.rs  ip.rs  ip6.rs  ip_opt.rs  lib.rs  mac_address.rs  pdu.rs  prelude.rs  raw.rs  table.rs  tcp.rs  tid.rs  udp.rs  utils.rs
nexus-macros/: Cargo.toml
nexus-macros/src/: lib.rs
nexus-pstruct/: Cargo.toml
nexus-pstruct/src/: lib.rs  types.rs
nexus-pstruct/tests/: protocol.rs
nexus-tid/: Cargo.toml
proc-macros/: Cargo.toml
src/: alloc.rs  arena.rs  error.rs  ethernet.rs  icmp.rs  ip.rs  ip6.rs  lib.rs  mac_address.rs  packet.rs  pdu.rs  prelude.rs  raw.rs  tcp.rs  udp.rs  utils.rs
